Revamp build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,66 +3,58 @@ cmake_minimum_required(VERSION 3.5.1)
 project(Mull)
 enable_language(C CXX)
 
-# This enables assertions for Release builds.
-# https://stackoverflow.com/questions/22140520/how-to-enable-assert-in-cmake-release-mode
-string(REPLACE "-DNDEBUG" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-
-# Setting THREADS_PREFER_PTHREAD_FLAG and finding package Threads resolves:
-# /usr/bin/ld: ../../gtest-1.7.0/libgtest.a(gtest-all.cc.o): undefined reference to symbol     'pthread_key_delete@@GLIBC_2.2.5'
-# /lib/x86_64-linux-gnu/libpthread.so.0: error adding symbols: DSO missing from command line
-# https://stackoverflow.com/questions/25617839/undefined-reference-to-symbol-pthread-key-deleteglibc-2-2-5
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-
-add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-std=c++11>)
-
-# if (NOT CMAKE_TOOLCHAIN_FILE)
-# message(FATAL_ERROR "This CMakeLists.txt file expects cmake to be called with a CMake toolchain file:
-# cmake ... -DCMAKE_TOOLCHAIN_FILE=path_to_your_toolchain_file.
-# See example: Mull.toolchain.OSX.cmake")
-# endif()
-
 if (NOT LLVM_ROOT)
   message(FATAL_ERROR "This CMakeLists.txt file expects cmake to be called with
   LLVM_ROOT provided:\n \
   -DLLVM_ROOT=path-to-llvm-installation")
 endif()
 
-include(Mull.LLVM.cmake)
+# This enables assertions for Release builds.
+# https://stackoverflow.com/questions/22140520/how-to-enable-assert-in-cmake-release-mode
+string(REPLACE "-DNDEBUG" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 
-## LLVM CXX flags
-llvm_get_cxx_flags(LLVM_CXX_FLAGS)
+set (search_paths
+  ${LLVM_ROOT}
+  ${LLVM_ROOT}/lib/cmake
+  ${LLVM_ROOT}/lib/cmake/llvm
+  ${LLVM_ROOT}/lib/cmake/clang
+  ${LLVM_ROOT}/share/clang/cmake/
+  ${LLVM_ROOT}/share/llvm/cmake/
+)
 
-## LLVM lib directory
-llvm_get_lib_dir(LLVM_LIB_PATH)
+find_package(LLVM REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
+find_package(Clang REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
 
-## LLVM linker flags.
-llvm_get_link_flags(LLVM_LINK_FLAGS)
-# Without -undefined,dynamic_lookup flags there is a problem with order in which
-# the libraries are linked and that causes missing symbols.
-# https://github.com/eliben/llvm-clang-samples/pull/11
-set(LLVM_LINK_FLAGS "${LLVM_LINK_FLAGS} -Wl,-undefined,dynamic_lookup")
+set (llvm_patch_version "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.${LLVM_VERSION_PATCH}")
+set (llvm_minor_version "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.x")
+set (llvm_major_version "${LLVM_VERSION_MAJOR}.x.x")
 
-# To link the final executable correctly on Linux the LLVM and clang libraries
-# should be given to a linker in the right order. Alternatively, the libraries
-# could be wrapped into a --start-group/--end-group. Unfortunately, MacOS linker
-# does not support these options, so we do this trick here
-if (APPLE)
-  set (LD_START_GROUP "")
-  set (LD_END_GROUP "")
+if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_patch_version})
+  set (LLVM_COMPATIBILITY_DIR ${llvm_patch_version})
+
+elseif(EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_minor_version})
+  set (LLVM_COMPATIBILITY_DIR ${llvm_minor_version})
+
+elseif(EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_major_version})
+  set (LLVM_COMPATIBILITY_DIR ${llvm_major_version})
 else()
-  set (LD_START_GROUP "-Wl,--start-group")
-  set (LD_END_GROUP "-Wl,--end-group")
+  message(FATAL_ERROR "LLVM-${LLVM_PACKAGE_VERSION} is not supported")
 endif()
 
-# LLVM libraries
-set(llvm_components
-  "asmparser"
-  "orcjit"
-  "support"
-  "x86"
-  "option")
-llvm_get_libs(MULL_DEPENDENCY_LLVM_LIBRARIES "${llvm_components}")
+set(MULL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
+set (MULL_CXX_FLAGS "-std=c++11")
+if (NOT LLVM_ENABLE_RTTI)
+  set(MULL_CXX_FLAGS "${MULL_CXX_FLAGS} -fno-rtti")
+endif()
+
+set (MULL_LINK_FLAGS "-rdynamic")
+set (MULL_DEFINITIONS ${LLVM_DEFINITIONS})
+set (MULL_INCLUDE_DIRS
+  ${MULL_SOURCE_DIR}/include
+  ${LLVM_INCLUDE_DIRS}
+  ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${LLVM_COMPATIBILITY_DIR}
+)
 
 # https://cmake.org/Wiki/CMake_RPATH_handling#Always_full_RPATH
 SET(CMAKE_SKIP_BUILD_RPATH FALSE)
@@ -70,38 +62,8 @@ SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib" "${LLVM_LIB_PATH}")
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-set(MULL_SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
-set(MULL_INCLUDE_DIR  ${MULL_SOURCE_DIR}/include)
-
-include_directories("${LLVM_ROOT}/include")
-
-## LLVM's dependencies.
-find_library(MULL_DEPENDENCY_LIBZ z HINTS ${MULL_TOOLCHAIN_LIBZ_PATH})
-find_library(MULL_DEPENDENCY_NCURSES ncurses)
-## Mull's own dependencies:
-find_library(MULL_DEPENDENCY_SQLITE sqlite3 HINTS ${MULL_TOOLCHAIN_SQLITE_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG clang HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_TOOLING clangTooling HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_BASIC clangBasic HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_FRONTEND clangFrontend HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_AST clangAST HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_LEX clangLex HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_DRIVER clangDriver HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_SEMA clangSema HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_SERIALIZATION clangSerialization HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_ANALYSIS clangAnalysis HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_PARSE clangParse HINTS ${LLVM_LIB_PATH})
-find_library(MULL_DEPENDENCY_LIBCLANG_EDIT clangEdit HINTS ${LLVM_LIB_PATH})
-
-
-include_directories(${MULL_INCLUDE_DIR})
-
 add_subdirectory(lab)
-
-llvm_get_version(LLVM_VERSION)
-add_subdirectory(LLVMCompatibility/${LLVM_VERSION})
-include_directories(LLVMCompatibility/${LLVM_VERSION})
-
+add_subdirectory(LLVMCompatibility/${LLVM_COMPATIBILITY_DIR})
 add_subdirectory(lib)
 add_subdirectory(googletest)
 add_subdirectory(tools)
