--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -125,9 +125,9 @@ find_package(Threads REQUIRED)
 
 target_link_libraries(mull
   ${MULL_LLVM_LIBRARIES}
+  ${SQLITE_DEPENDENCY}
   libclang
   clangTooling
-  sqlite3
   Threads::Threads
 )
 target_include_directories(mull PUBLIC ${MULL_INCLUDE_DIRS})
