--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,16 @@ cmake_minimum_required(VERSION 3.5.1)
 project(Mull)
 enable_language(C CXX)
 
-if (NOT LLVM_ROOT)
-  message(FATAL_ERROR "This CMakeLists.txt file expects cmake to be called with
-  LLVM_ROOT provided:\n \
-  -DLLVM_ROOT=path-to-llvm-installation")
+if (NOT PRECOMPILED_LLVM_DIR AND NOT SOURCE_LLVM_DIR)
+  message(FATAL_ERROR " 
+ The cmake is supposed to be called with either of the following options:
+ PRECOMPILED_LLVM_DIR: path to a precompiled version of LLVM
+ SOURCE_LLVM_DIR: path to a source code of LLVM
+ 
+ Examples:
+ cmake -G \"${CMAKE_GENERATOR}\" -DPRECOMPILED_LLVM_DIR=/opt/llvm-3.9.0 ${CMAKE_SOURCE_DIR}
+ cmake -G \"${CMAKE_GENERATOR}\" -DSOURCE_LLVM_DIR=${CMAKE_SOURCE_DIR}/llvm_source/3.9.0 ${CMAKE_SOURCE_DIR}
+")
 endif()
 
 # This enables assertions for Release builds.
@@ -25,21 +31,29 @@ if (PkgConfig_FOUND)
   endif()
 endif()
 
-set (search_paths
-  ${LLVM_ROOT}
-  ${LLVM_ROOT}/lib/cmake
-  ${LLVM_ROOT}/lib/cmake/llvm
-  ${LLVM_ROOT}/lib/cmake/clang
-  ${LLVM_ROOT}/share/clang/cmake/
-  ${LLVM_ROOT}/share/llvm/cmake/
-)
+if (PRECOMPILED_LLVM_DIR)
+  set (search_paths
+    ${PRECOMPILED_LLVM_DIR}
+    ${PRECOMPILED_LLVM_DIR}/lib/cmake
+    ${PRECOMPILED_LLVM_DIR}/lib/cmake/llvm
+    ${PRECOMPILED_LLVM_DIR}/lib/cmake/clang
+    ${PRECOMPILED_LLVM_DIR}/share/clang/cmake/
+    ${PRECOMPILED_LLVM_DIR}/share/llvm/cmake/
+  )
 
-find_package(LLVM REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
-find_package(Clang REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
+  find_package(LLVM REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
+  find_package(Clang REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
+endif()
+
+if(SOURCE_LLVM_DIR)
+  # TBD
+endif()
 
 set (llvm_patch_version "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.${LLVM_VERSION_PATCH}")
 set (llvm_minor_version "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.x")
 set (llvm_major_version "${LLVM_VERSION_MAJOR}.x.x")
+
+set (full_llvm_version ${llvm_patch_version})
 
 if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_patch_version})
   set (LLVM_COMPATIBILITY_DIR ${llvm_patch_version})
@@ -50,7 +64,7 @@ elseif(EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_minor_version})
 elseif(EXISTS ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${llvm_major_version})
   set (LLVM_COMPATIBILITY_DIR ${llvm_major_version})
 else()
-  message(FATAL_ERROR "LLVM-${LLVM_PACKAGE_VERSION} is not supported")
+  message(FATAL_ERROR "LLVM-${full_llvm_version} is not supported")
 endif()
 
 set(MULL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
