--- a/lab/CMakeLists.txt
+++ b/lab/CMakeLists.txt
@@ -1,5 +1,5 @@
-set (CURRENT_CC ${LLVM_ROOT}/bin/clang)
-set (CURRENT_CXX ${LLVM_ROOT}/bin/clang++)
+set (CURRENT_CC ${PRECOMPILED_LLVM_DIR}/bin/clang)
+set (CURRENT_CXX ${PRECOMPILED_LLVM_DIR}/bin/clang++)
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/Makefile.common.in
   ${CMAKE_CURRENT_SOURCE_DIR}/Makefile.common
