--- a/googletest/CMakeLists.txt
+++ b/googletest/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB_RECURSE google_test_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 
 set(google_test_sources src/gtest-all.cc src/gtest_main.cc)
 
-add_library(google-test STATIC ${google_test_sources} ${google_test_headers})
+add_library(google-test STATIC EXCLUDE_FROM_ALL ${google_test_sources} ${google_test_headers})
 
 set_target_properties(google-test
   PROPERTIES COMPILE_FLAGS ${MULL_CXX_FLAGS}
