Start separating config

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(mull_sources
-  ConfigParser.cpp
-  Config.cpp
+  Config/ConfigParser.cpp
+  Config/RawConfig.cpp
   Context.cpp
   Driver.cpp
   ForkProcessSandbox.cpp
