Split configuration for better testability

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -75,6 +75,8 @@ set(mull_sources
   Parallelization/Tasks/MutantExecutionTask.cpp
   Parallelization/Tasks/OriginalCompilationTask.cpp
   Parallelization/Tasks/ApplyMutationTask.cpp
+  Config/ConfigurationOptions.cpp
+  Config/Configuration.cpp
 )
 
 set (MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include)
