Teach Mull's test suite to compile against LLVM's sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,17 @@ set (MULL_INCLUDE_DIRS
   ${SQLITE3_INCLUDEDIR}
 )
 
+if ("LLVM" IN_LIST LLVM_AVAILABLE_LIBS)
+  set (MULL_LLVM_COMPATIBILITY_LIBRARIES
+    LLVM
+  )
+else()
+  set (MULL_LLVM_COMPATIBILITY_LIBRARIES
+    LLVMSupport
+    LLVMCore
+  )
+endif()
+
 # https://cmake.org/Wiki/CMake_RPATH_handling#Always_full_RPATH
 SET(CMAKE_SKIP_BUILD_RPATH FALSE)
 SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
