--- a/tools/driver/CMakeLists.txt
+++ b/tools/driver/CMakeLists.txt
@@ -1,16 +1,10 @@
-add_executable(mull-driver driver.cpp)
-target_link_libraries(mull-driver
-  mull
+set (SOURCES
+  ${CMAKE_CURRENT_LIST_DIR}/driver.cpp
 )
 
-set_target_properties(mull-driver PROPERTIES
-  LINK_FLAGS ${MULL_LINK_FLAGS}
-  COMPILE_FLAGS ${MULL_CXX_FLAGS}
-)
-target_include_directories(mull-driver PUBLIC
-  ${MULL_INCLUDE_DIRS}
+add_mull_executable(
+  SOURCES ${SOURCES}
+  NAME mull-driver
+  LINK_WITH mull
 )
 
-INSTALL(TARGETS mull-driver
-  RUNTIME DESTINATION bin
-)
