--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if (${BUILD_AGAINST_PRECOMPILED_LLVM})
   if (TARGET clang)
     get_target_property(MULL_CC clang LOCATION)
   else()
-    set(MULL_CC ${PRECOMPILED_LLVM_DIR}/bin/clang)
+    set(MULL_CC ${PATH_TO_LLVM}/bin/clang)
   endif()
 else()
   macro(get_llvm_version_component input component)
