--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_install:
 
 # Build steps
 script:
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make ninja.init travis.test PRECOMPILED_LLVM_DIR=/opt/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make ninja.init travis.test PRECOMPILED_LLVM_DIR=/opt/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
+- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then make ninja.init travis.test PATH_TO_LLVM=/opt/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
+- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then make ninja.init travis.test PATH_TO_LLVM=/opt/llvm-$LLVM_VERSION INSTALL_DIR=/tmp/mull; fi
 
