Introduce Program entity

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -78,7 +78,7 @@ set(mull_sources
   Config/ConfigurationOptions.cpp
   Config/Configuration.cpp
   TestFrameworks/TestFramework.cpp
-  TestFrameworks/TestFrameworkFactory.cpp)
+  TestFrameworks/TestFrameworkFactory.cpp Program/Program.cpp)
 
 set (MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include)
 
