--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,8 @@ if (MULL_BUILD_32_BITS)
   set(MULL_LINK_FLAGS "${MULL_LINK_FLAGS} -m32")
 endif()
 
+add_subdirectory(vendor)
+
 set (MULL_DEFINITIONS ${LLVM_DEFINITIONS})
 set (MULL_INCLUDE_DIRS
   ${MULL_SOURCE_DIR}/include
@@ -153,6 +155,7 @@ set (MULL_INCLUDE_DIRS
   ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${LLVM_COMPATIBILITY_DIR}
   ${SQLITE3_INCLUDE_DIRS}
   ${SQLITE3_INCLUDEDIR}
+  ${CMAKE_CURRENT_LIST_DIR}/vendor/LibEBC/lib/include
 )
 
 if ("LLVM" IN_LIST LLVM_AVAILABLE_LIBS)
