--- a/infrastructure/macos-playbook.yaml
+++ b/infrastructure/macos-playbook.yaml
@@ -26,6 +26,8 @@
       homebrew:
         name: "{{ packages }}"
         state: present
+      environment:
+        HOMEBREW_NO_AUTO_UPDATE: 1
 
     - name: Install LLVM
       include: helpers/download-llvm.yaml
