--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -5,6 +5,9 @@ working_dir: /opt
 
 llvm_mapping:
   macos:
+    7.0.0:
+      url: https://releases.llvm.org/7.0.0/clang+llvm-7.0.0-x86_64-apple-darwin.tar.xz
+      path: clang+llvm-7.0.0-x86_64-apple-darwin
     6.0.0:
       url: https://releases.llvm.org/6.0.0/clang+llvm-6.0.0-x86_64-apple-darwin.tar.xz
       path: clang+llvm-6.0.0-x86_64-apple-darwin
@@ -33,6 +36,9 @@ llvm_mapping:
       path: clang+llvm-3.9.0-x86_64-linux-gnu-debian8
 
   ubuntu:
+    7.0.0:
+      url: https://releases.llvm.org/7.0.0/clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz
+      path: clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-16.04
     6.0.0:
       url: https://releases.llvm.org/6.0.0/clang+llvm-6.0.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz
       path: clang+llvm-6.0.0-x86_64-linux-gnu-ubuntu-16.04
