--- a/lab/CMakeLists.txt
+++ b/lab/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(junk_detection)
 add_subdirectory(mutators)
 add_subdirectory(simple_test)
 add_subdirectory(hardcode)
+add_subdirectory(exceptions)
