[Junk Detection] Detect junk for MathAdd mutator

--- a/lab/mutators/CMakeLists.txt
+++ b/lab/mutators/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(and_or_replacement)
 add_subdirectory(and_or_replacement_cpp)
 add_subdirectory(boundary)
+add_subdirectory(math_add)
 add_subdirectory(math_div)
 add_subdirectory(math_mul)
 add_subdirectory(math_sub)
