--- a/lab/mutators/negate_condition/CMakeLists.txt
+++ b/lab/mutators/negate_condition/CMakeLists.txt
@@ -1,6 +1,7 @@
 set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/tester.c
   ${CMAKE_CURRENT_LIST_DIR}/testee.c
+  ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
 )
 
 foreach(source ${SOURCES})
