[Infra] Add (not-working-yet) playbook and machine for Fedora

--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -52,6 +52,11 @@ llvm_mapping:
       url: https://releases.llvm.org/3.9.0/clang+llvm-3.9.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz
       path: clang+llvm-3.9.0-x86_64-linux-gnu-ubuntu-16.04
 
+  fedora:
+    6.0.0:
+      url: http://releases.llvm.org/6.0.0/clang+llvm-6.0.0-x86_64-linux-gnu-Fedora27.tar.xz
+      path: clang+llvm-6.0.0-x86_64-linux-gnu-Fedora27
+
 
 llvm_url: "{{ llvm_mapping[platform][llvm_version].url }}"
 llvm_path: "{{ llvm_mapping[platform][llvm_version].path }}"
