--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -33,5 +33,26 @@ Vagrant.configure(2) do |config|
     end
   end
 
+  config.vm.define "fedora" do |cfg|
+    cfg.vm.box = "fedora/29-cloud-base"
+    cfg.vm.box_version = "29.20181024.1"
+    cfg.ssh.insert_key = false
+
+    cfg.vm.provider "virtualbox" do |v|
+      v.memory = 1024
+      v.cpus = 2
+    end
+
+    cfg.vm.provision "shell", inline: "yum install -y python"
+
+    cfg.vm.provision "ansible" do |ansible|
+      ansible.verbose = "v"
+      ansible.playbook = "fedora-playbook.yaml"
+      ansible.extra_vars = {
+        llvm_version: ENV['LLVM_VERSION'] || '6.0.0'
+      }
+    end
+  end
+
 end
 
