--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -77,7 +77,7 @@ set(mull_sources
   Config/ConfigurationOptions.cpp
   Config/Configuration.cpp
   TestFrameworks/TestFramework.cpp
-  TestFrameworks/TestFrameworkFactory.cpp Program/Program.cpp ObjectLoader.cpp JunkDetection/CXX/Visitors/InstructionRangeVisitor.cpp JunkDetection/CXX/Visitors/ConditionalsBoundaryVisitor.cpp)
+  TestFrameworks/TestFrameworkFactory.cpp Program/Program.cpp ObjectLoader.cpp JunkDetection/CXX/Visitors/InstructionRangeVisitor.cpp JunkDetection/CXX/Visitors/ConditionalsBoundaryVisitor.cpp JunkDetection/CXX/Visitors/MathAddVisitor.cpp)
 
 set (MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include)
 
