[Junk Detection] Introduce custom CompilationDatabase
There are at least two reasons we do not use the CompilationDatabase from
Clang:

1. It expects a directory with a hardcoded filename
   (compile_commands.json), which is weird UX.
2. It silently eats the very first argument in the command/arguments
   string, which is required on macOS in order to build the right header
   search paths.

--- a/lab/junk_detection/compdb/CMakeLists.txt
+++ b/lab/junk_detection/compdb/CMakeLists.txt
@@ -29,3 +29,14 @@ configure_file(
 
 add_fixture(${CMAKE_CURRENT_LIST_DIR}/include)
 
+set (databases
+  ${CMAKE_CURRENT_LIST_DIR}/db_with_arguments.json
+  ${CMAKE_CURRENT_LIST_DIR}/db_with_commands.json
+  ${CMAKE_CURRENT_LIST_DIR}/db_with_output.json
+  ${CMAKE_CURRENT_LIST_DIR}/db_with_fullpath_compiler.json
+)
+
+foreach(database ${databases})
+  add_fixture(${database})
+endforeach()
+
